// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Select > Snapshots > matches default snapshot 1`] = `
<button
  aria-autocomplete="none"
  aria-controls="radix-«r3»"
  aria-expanded="false"
  class="select__trigger"
  data-placeholder=""
  data-state="closed"
  dir="ltr"
  role="combobox"
  type="button"
>
  <span
    style="pointer-events: none;"
  >
    Select an option
  </span>
  <svg
    aria-hidden="true"
    class="lucide lucide-chevron-down select__icon"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m6 9 6 6 6-6"
    />
  </svg>
</button>
`;

exports[`Select > Snapshots > matches disabled state snapshot 1`] = `
<button
  aria-autocomplete="none"
  aria-controls="radix-«rd»"
  aria-expanded="false"
  class="select__trigger"
  data-disabled=""
  data-placeholder=""
  data-state="closed"
  dir="ltr"
  disabled=""
  role="combobox"
  type="button"
>
  <span
    style="pointer-events: none;"
  >
    Select an option
  </span>
  <svg
    aria-hidden="true"
    class="lucide lucide-chevron-down select__icon"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m6 9 6 6 6-6"
    />
  </svg>
</button>
`;

exports[`Select > Snapshots > matches error state snapshot 1`] = `
<button
  aria-autocomplete="none"
  aria-controls="radix-«ri»"
  aria-expanded="false"
  class="select__trigger select__trigger--error"
  data-placeholder=""
  data-state="closed"
  dir="ltr"
  role="combobox"
  type="button"
>
  <span
    style="pointer-events: none;"
  >
    Select an option
  </span>
  <svg
    aria-hidden="true"
    class="lucide lucide-chevron-down select__icon"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m6 9 6 6 6-6"
    />
  </svg>
</button>
`;

exports[`Select > Snapshots > matches loading state snapshot 1`] = `
<button
  aria-autocomplete="none"
  aria-controls="radix-«r8»"
  aria-expanded="false"
  class="select__trigger select__trigger--loading"
  data-disabled=""
  data-placeholder=""
  data-state="closed"
  dir="ltr"
  disabled=""
  role="combobox"
  type="button"
>
  <span
    style="pointer-events: none;"
  >
    Select an option
  </span>
  <div
    aria-hidden="true"
    class="select__spinner"
  />
</button>
`;
